--- a/AveDistUnitSquareAbInitio.ipynb
+++ b/AveDistUnitSquareAbInitio.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,6 +54,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,6 +94,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -156,7 +160,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 4 \\left(1 - x\\right) \\left(1 - y\\right) \\sqrt{x^{2} + y^{2}}$"
+       "$\\displaystyle 4 \\cdot \\left(1 - x\\right) \\left(1 - y\\right) \\sqrt{x^{2} + y^{2}}$"
       ],
       "text/plain": [
        "4*(1 - x)*(1 - y)*sqrt(x**2 + y**2)"
@@ -172,6 +176,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,6 +184,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,33 +197,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AverageDistanceX = integrate(WeightedDistance, (y,0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left(4 - 4 x\\right) \\left(\\frac{x^{2} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)}}{2} + \\frac{x \\sqrt{1 + \\frac{1}{x^{2}}}}{2} - \\frac{\\left(x^{2} + 1\\right)^{\\frac{3}{2}}}{3}\\right) + \\frac{\\left(4 - 4 x\\right) \\left(x^{2}\\right)^{\\frac{3}{2}}}{3}$"
-      ],
-      "text/plain": [
-       "(4 - 4*x)*(x**2*asinh(1/x)/2 + x*sqrt(1 + x**(-2))/2 - (x**2 + 1)**(3/2)/3) + (4 - 4*x)*(x**2)**(3/2)/3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "AverageDistanceX = integrate(WeightedDistance, (y,0,1))\n",
     "AverageDistanceX"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,9 +213,24 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
+      ],
+      "text/plain": [
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "AverageDistance = integrate(AverageDistanceX, (x,0,1))"
+    "AverageDistance = integrate(AverageDistanceX, (x,0,1))\n",
+    "AverageDistance"
    ]
   },
   {
@@ -241,10 +241,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{2 \\int\\limits_{0}^{1} \\left(x - 1\\right) \\left(2 x^{3} - 2 x^{2} \\sqrt{x^{2} + 1} + 3 x^{2} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)} + \\sqrt{x^{2} + 1}\\right)\\, dx}{3}$"
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
       ],
       "text/plain": [
-       "-2*Integral((x - 1)*(2*x**3 - 2*x**2*sqrt(x**2 + 1) + 3*x**2*asinh(1/x) + sqrt(x**2 + 1)), (x, 0, 1))/3"
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
       ]
      },
      "execution_count": 13,
@@ -253,204 +253,9 @@
     }
    ],
    "source": [
-    "AverageDistance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AverageDistanceExpanded = expand(AverageDistance).doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{0}^{1} x^{3} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)}\\, dx + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{0}^{1} x^{2} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)}\\, dx$"
-      ],
-      "text/plain": [
-       "-13*sqrt(2)/30 - 2*Integral(x**3*asinh(1/x), (x, 0, 1)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(x**2*asinh(1/x), (x, 0, 1))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "AverageDistanceExpanded = expand(AverageDistance).doit()\n",
     "AverageDistanceExpanded"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AverageDistanceIntegral = Integral(AverageDistanceX, (x,0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int\\limits_{0}^{1} \\left(\\left(4 - 4 x\\right) \\left(\\frac{x^{2} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)}}{2} + \\frac{x \\sqrt{1 + \\frac{1}{x^{2}}}}{2} - \\frac{\\left(x^{2} + 1\\right)^{\\frac{3}{2}}}{3}\\right) + \\frac{\\left(4 - 4 x\\right) \\left(x^{2}\\right)^{\\frac{3}{2}}}{3}\\right)\\, dx$"
-      ],
-      "text/plain": [
-       "Integral((4 - 4*x)*(x**2*asinh(1/x)/2 + x*sqrt(1 + x**(-2))/2 - (x**2 + 1)**(3/2)/3) + (4 - 4*x)*(x**2)**(3/2)/3, (x, 0, 1))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AverageDistanceIntegral"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\int\\limits_{0}^{1} \\left(- \\frac{4 \\sqrt{x^{2} + 1}}{3}\\right)\\, dx + \\int\\limits_{0}^{1} \\left(- 2 x^{2} \\sqrt{1 + \\frac{1}{x^{2}}}\\right)\\, dx + \\int\\limits_{0}^{1} \\left(- \\frac{4 x^{2} \\sqrt{x^{2} + 1}}{3}\\right)\\, dx + \\int\\limits_{0}^{1} \\left(- 2 x^{3} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)}\\right)\\, dx + \\int\\limits_{0}^{1} \\left(- \\frac{4 x \\left(x^{2}\\right)^{\\frac{3}{2}}}{3}\\right)\\, dx + \\int\\limits_{0}^{1} \\frac{4 \\left(x^{2}\\right)^{\\frac{3}{2}}}{3}\\, dx + \\int\\limits_{0}^{1} \\frac{4 x^{3} \\sqrt{x^{2} + 1}}{3}\\, dx + \\int\\limits_{0}^{1} 2 x^{2} \\operatorname{asinh}{\\left(\\frac{1}{x} \\right)}\\, dx + \\int\\limits_{0}^{1} \\frac{4 x \\sqrt{x^{2} + 1}}{3}\\, dx + \\int\\limits_{0}^{1} 2 x \\sqrt{1 + \\frac{1}{x^{2}}}\\, dx$"
-      ],
-      "text/plain": [
-       "Integral(-4*sqrt(x**2 + 1)/3, (x, 0, 1)) + Integral(-2*x**2*sqrt(1 + x**(-2)), (x, 0, 1)) + Integral(-4*x**2*sqrt(x**2 + 1)/3, (x, 0, 1)) + Integral(-2*x**3*asinh(1/x), (x, 0, 1)) + Integral(-4*x*(x**2)**(3/2)/3, (x, 0, 1)) + Integral(4*(x**2)**(3/2)/3, (x, 0, 1)) + Integral(4*x**3*sqrt(x**2 + 1)/3, (x, 0, 1)) + Integral(2*x**2*asinh(1/x), (x, 0, 1)) + Integral(4*x*sqrt(x**2 + 1)/3, (x, 0, 1)) + Integral(2*x*sqrt(1 + x**(-2)), (x, 0, 1))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AverageDistanceIntegral.expand()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AveDistIntegral2 = AverageDistanceIntegral.transform(x,1/u).expand().doit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "asinh(x) = log(x + sqrt(1+x*x)); \n",
-    "the integrals can be solved using partial integration, but how to tell sympy???"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{1}^{\\infty} \\frac{\\operatorname{asinh}{\\left(u \\right)}}{u^{5}}\\, du + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{1}^{\\infty} \\frac{\\operatorname{asinh}{\\left(u \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "-13*sqrt(2)/30 - 2*Integral(asinh(u)/u**5, (u, 1, oo)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(asinh(u)/u**4, (u, 1, oo))"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistIntegral2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AveDistIntegral3 = AveDistIntegral2.rewrite(log)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{1}^{\\infty} \\frac{\\log{\\left(u + \\sqrt{u^{2} + 1} \\right)}}{u^{5}}\\, du + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{1}^{\\infty} \\frac{\\log{\\left(u + \\sqrt{u^{2} + 1} \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "-13*sqrt(2)/30 - 2*Integral(log(u + sqrt(u**2 + 1))/u**5, (u, 1, oo)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(log(u + sqrt(u**2 + 1))/u**4, (u, 1, oo))"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistIntegral3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{4 \\sqrt{2}}{15} + \\frac{2}{15} + 2 \\int\\limits_{1}^{\\infty} \\frac{\\log{\\left(u + \\sqrt{u^{2} + 1} \\right)}}{u^{4}}\\, du$"
-      ],
-      "text/plain": [
-       "-4*sqrt(2)/15 + 2/15 + 2*Integral(log(u + sqrt(u**2 + 1))/u**4, (u, 1, oo))"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistIntegral3.doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -469,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
