--- a/AverageDistanceUnitSquare.ipynb
+++ b/AverageDistanceUnitSquare.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,6 +52,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,6 +115,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{0}^{1} y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{0}^{1} y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy$"
+      ],
+      "text/plain": [
+       "-13*sqrt(2)/30 - 2*Integral(y**3*asinh(1/y), (y, 0, 1)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(y**2*asinh(1/y), (y, 0, 1))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AverageDistance.expand().doit()"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,7 +263,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle y^{2} \\left(1 - y\\right) \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}$"
+       "$\\displaystyle y^{2} \\cdot \\left(1 - y\\right) \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}$"
       ],
       "text/plain": [
        "y**2*(1 - y)*asinh(1/y)"
@@ -338,7 +364,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle y^{2} \\left(1 - y\\right) \\log{\\left(\\sqrt{1 + \\frac{1}{y^{2}}} + \\frac{1}{y} \\right)}$"
+       "$\\displaystyle y^{2} \\cdot \\left(1 - y\\right) \\log{\\left(\\sqrt{1 + \\frac{1}{y^{2}}} + \\frac{1}{y} \\right)}$"
       ],
       "text/plain": [
        "y**2*(1 - y)*log(sqrt(1 + y**(-2)) + 1/y)"
@@ -416,6 +442,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -690,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
