--- a/AveDistUnitSquareAbInitio.ipynb
+++ b/AveDistUnitSquareAbInitio.ipynb
@@ -235,26 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
+       "$\\displaystyle 0.521405433164721$"
       ],
       "text/plain": [
-       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
+       "0.521405433164721"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "AverageDistanceExpanded = expand(AverageDistance).doit()\n",
-    "AverageDistanceExpanded"
+    "AverageDistance.evalf()"
    ]
   }
  ],
