trying 2-dim integration in one step

--- a/AveDistUnitSquareAbInitio.ipynb
+++ b/AveDistUnitSquareAbInitio.ipynb
@@ -255,6 +255,15 @@
    "source": [
     "AverageDistance.evalf()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integrate(WeightedDistance, (y,0,1), (x,0,1)).expand().rewrite(log).doit()"
+   ]
   }
  ],
  "metadata": {
