--- a/MeanDistUnitSquare2.ipynb
+++ b/MeanDistUnitSquare2.ipynb
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "# Calculate mean length using the probability distribution\n",
+    "# Calculate mean length on unit interval using the probability distribution\n",
     "MeanDistance1_S = integrate(PD1_S(s)*s, (s,0,1))\n",
     "MeanDistance1_S"
    ]
