Minor updates and clean-ups

--- a/AveDistNcube_MonteCarlo.ipynb
+++ b/AveDistNcube_MonteCarlo.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate mean distances in n-dimensional cubes using random number simulation"
+    "## Calculate mean distances in n-dimensional cubes using random number simulation\n",
+    "Optimized Monte Carlo simulation"
    ]
   },
   {
