--- a/AveDistUnitSquare_PDF.ipynb
+++ b/AveDistUnitSquare_PDF.ipynb
@@ -5,7 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mean distance in unit square - via probability density function for the distance"
+    "## Average distance in unit square - via probability density function for the distance\n",
+    "Approach is to determine the probability density function (pdf) for the squared distance, and from that the pdf for the distance\n",
+    "\n",
+    "This results in an analytical explicit expression for the desired pdf. \n",
+    "\n",
+    "From that pdf, calculate the avarage distance\n",
+    "\n",
+    "Sympy can handle all these analytical calculations"
    ]
   },
   {
