--- a/AverageDistanceUnitSquare.ipynb
+++ b/AverageDistanceUnitSquare.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Average distance between two random points in a unit square"
+    "# Average distance between two random points in a unit square\n",
+    "Sympy could not complete the analytical integration"
    ]
   },
   {
