--- a/AveDistUnitSquareAbInitio.ipynb
+++ b/AveDistUnitSquareAbInitio.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{0}^{1}\\int\\limits_{0}^{1}\\int\\limits_{0}^{1}\\int\\limits_{0}^{1} \\sqrt{\\left(- x_{1} + x_{2}\\right)^{2} + \\left(- y_{1} + y_{2}\\right)^{2}}\\, dx_{1}\\, dx_{2}\\, dy_{1}\\, dy_{2}$"
+      ],
+      "text/plain": [
+       "Integral(sqrt((-x1 + x2)**2 + (-y1 + y2)**2), (x1, 0, 1), (x2, 0, 1), (y1, 0, 1), (y2, 0, 1))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AverageDistanceIntegral"
    ]
@@ -48,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sqrt{x^{2} + y^{2}}$"
+      ],
+      "text/plain": [
+       "sqrt(x**2 + y**2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Distance"
    ]
@@ -76,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4 \\int\\limits_{0}^{1 - y}\\int\\limits_{0}^{1 - x}\\int\\limits_{0}^{1}\\int\\limits_{0}^{1} \\sqrt{x^{2} + y^{2}}\\, dx\\, dy\\, dx_{1}\\, dy_{1}$"
+      ],
+      "text/plain": [
+       "4*Integral(sqrt(x**2 + y**2), (x, 0, 1), (y, 0, 1), (x1, 0, 1 - x), (y1, 0, 1 - y))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AverageDistanceIntegralByS"
    ]
@@ -102,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4 \\cdot \\left(1 - x\\right) \\left(1 - y\\right) \\sqrt{x^{2} + y^{2}}$"
+      ],
+      "text/plain": [
+       "4*(1 - x)*(1 - y)*sqrt(x**2 + y**2)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "WeightedDistance"
    ]
@@ -136,9 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(4 x - 4\\right) \\int\\limits_{0}^{1} \\sqrt{x^{2} + y^{2}} \\left(y - 1\\right)\\, dy$"
+      ],
+      "text/plain": [
+       "(4*x - 4)*Integral(sqrt(x**2 + y**2)*(y - 1), (y, 0, 1))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AverageDistanceX = integrate(WeightedDistance, (y,0,1))\n",
     "AverageDistanceX"
@@ -154,9 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4 \\int\\limits_{0}^{1} x \\int\\limits_{0}^{1} y \\sqrt{x^{2} + y^{2}}\\, dy\\, dx + 4 \\int\\limits_{0}^{1} x \\int\\limits_{0}^{1} \\left(- \\sqrt{x^{2} + y^{2}}\\right)\\, dy\\, dx + 4 \\int\\limits_{0}^{1} \\left(- \\int\\limits_{0}^{1} y \\sqrt{x^{2} + y^{2}}\\, dy\\right)\\, dx + 4 \\int\\limits_{0}^{1} \\left(- \\int\\limits_{0}^{1} \\left(- \\sqrt{x^{2} + y^{2}}\\right)\\, dy\\right)\\, dx$"
+      ],
+      "text/plain": [
+       "4*Integral(x*Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4*Integral(x*Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4*Integral(-Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4*Integral(-Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AverageDistance = integrate(AverageDistanceX, (x,0,1))\n",
     "AverageDistance"
@@ -164,16 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4.0 \\int\\limits_{0}^{1} x \\int\\limits_{0}^{1} y \\sqrt{x^{2} + y^{2}}\\, dy\\, dx + 4.0 \\int\\limits_{0}^{1} x \\int\\limits_{0}^{1} \\left(- \\sqrt{x^{2} + y^{2}}\\right)\\, dy\\, dx + 4.0 \\int\\limits_{0}^{1} \\left(- \\int\\limits_{0}^{1} y \\sqrt{x^{2} + y^{2}}\\, dy\\right)\\, dx + 4.0 \\int\\limits_{0}^{1} \\left(- \\int\\limits_{0}^{1} \\left(- \\sqrt{x^{2} + y^{2}}\\right)\\, dy\\right)\\, dx$"
+      ],
+      "text/plain": [
+       "4.0*Integral(x*Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4.0*Integral(x*Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4.0*Integral(-Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4.0*Integral(-Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "AverageDistance.evalf()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
