--- a/AverageDistanceUnitSquare.ipynb
+++ b/AverageDistanceUnitSquare.ipynb
@@ -77,10 +77,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{2 \\int\\limits_{0}^{1} \\left(y - 1\\right) \\left(2 y^{3} - 2 y^{2} \\sqrt{y^{2} + 1} + 3 y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)} + \\sqrt{y^{2} + 1}\\right)\\, dy}{3}$"
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
       ],
       "text/plain": [
-       "-2*Integral((y - 1)*(2*y**3 - 2*y**2*sqrt(y**2 + 1) + 3*y**2*asinh(1/y) + sqrt(y**2 + 1)), (y, 0, 1))/3"
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
       ]
      },
      "execution_count": 5,
@@ -117,19 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{0}^{1} y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{0}^{1} y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy$"
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
       ],
       "text/plain": [
-       "-13*sqrt(2)/30 - 2*Integral(y**3*asinh(1/y), (y, 0, 1)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(y**2*asinh(1/y), (y, 0, 1))"
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,19 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{2 \\int\\limits_{0}^{1} \\left(y - 1\\right) \\left(2 y^{3} - 2 y^{2} \\sqrt{y^{2} + 1} + 3 y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)} + \\sqrt{y^{2} + 1}\\right)\\, dy}{3}$"
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
       ],
       "text/plain": [
-       "-2*Integral((y - 1)*(2*y**3 - 2*y**2*sqrt(y**2 + 1) + 3*y**2*asinh(1/y) + sqrt(y**2 + 1)), (y, 0, 1))/3"
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,34 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "AveDistExpanded = expand(AverageDistance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{2 \\int\\limits_{0}^{1} 2 y^{2} \\sqrt{y^{2} + 1}\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} 3 y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} y \\sqrt{y^{2} + 1}\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} 2 y^{4}\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} \\left(- 2 y^{3}\\right)\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} \\left(- 2 y^{3} \\sqrt{y^{2} + 1}\\right)\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} \\left(- \\sqrt{y^{2} + 1}\\right)\\, dy}{3} - \\frac{2 \\int\\limits_{0}^{1} \\left(- 3 y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\right)\\, dy}{3}$"
-      ],
-      "text/plain": [
-       "-2*Integral(2*y**2*sqrt(y**2 + 1), (y, 0, 1))/3 - 2*Integral(3*y**3*asinh(1/y), (y, 0, 1))/3 - 2*Integral(y*sqrt(y**2 + 1), (y, 0, 1))/3 - 2*Integral(2*y**4, (y, 0, 1))/3 - 2*Integral(-2*y**3, (y, 0, 1))/3 - 2*Integral(-2*y**3*sqrt(y**2 + 1), (y, 0, 1))/3 - 2*Integral(-sqrt(y**2 + 1), (y, 0, 1))/3 - 2*Integral(-3*y**2*asinh(1/y), (y, 0, 1))/3"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AveDistExpanded"
    ]
   },
   {
@@ -209,13 +186,36 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{0}^{1} y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{0}^{1} y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy$"
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
       ],
       "text/plain": [
-       "-13*sqrt(2)/30 - 2*Integral(y**3*asinh(1/y), (y, 0, 1)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(y**2*asinh(1/y), (y, 0, 1))"
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AveDistExpanded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
+      ],
+      "text/plain": [
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "Integral(y**2*asinh(1/y), y)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "y**2*(1 - y)*asinh(1/y)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "Integral(y**2*asinh(1/y), y) - Integral(y**3*asinh(1/y), y)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "-Integral(y**3*asinh(1/y), (y, 0, 1)) - Integral(-y**2*asinh(1/y), (y, 0, 1))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,19 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\lim_{y \\to 0^+}\\left(- y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)} + y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\right)$"
+       "$\\displaystyle 0$"
       ],
       "text/plain": [
-       "Limit(-y**3*asinh(1/y) + y**2*asinh(1/y), y, 0)"
+       "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "y**2*(1 - y)*log(sqrt(1 + y**(-2)) + 1/y)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "y**2*log(sqrt(1 + y**(-2)) + 1/y)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Integral(y**2*log(sqrt(1 + y**(-2)) + 1/y), y)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "-asinh(u)/u**4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "-Integral(asinh(u)/u**4, (u, 1, oo))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "-Integral(asinh(u)/u**4, u)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "log(u + sqrt(u**2 + 1))/u**4"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "Integral(log(u + sqrt(u**2 + 1))/u**4, u)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "Integral(log(u + sqrt(u**2 + 1))/u**4, (u, 1, oo))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "0.382597858232106"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "y**2*log(sqrt(1 + y**(-2)) + 1/y)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,19 +673,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - \\frac{13 \\sqrt{2}}{30} - 2 \\int\\limits_{0}^{1} y^{3} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{2} + \\frac{7}{15} + 2 \\int\\limits_{0}^{1} y^{2} \\operatorname{asinh}{\\left(\\frac{1}{y} \\right)}\\, dy$"
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
       ],
       "text/plain": [
-       "-13*sqrt(2)/30 - 2*Integral(y**3*asinh(1/y), (y, 0, 1)) + log(1 + sqrt(2))/2 + 7/15 + 2*Integral(y**2*asinh(1/y), (y, 0, 1))"
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
