Minor updates (comments)

--- a/AveDistUnitSquareAbInitio.ipynb
+++ b/AveDistUnitSquareAbInitio.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "Integral(sqrt((-x1 + x2)**2 + (-y1 + y2)**2), (x1, 0, 1), (x2, 0, 1), (y1, 0, 1), (y2, 0, 1))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "sqrt(x**2 + y**2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4*Integral(sqrt(x**2 + y**2), (x, 0, 1), (y, 0, 1), (x1, 0, 1 - x), (y1, 0, 1 - y))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4*(1 - x)*(1 - y)*sqrt(x**2 + y**2)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "(4*x - 4)*Integral(sqrt(x**2 + y**2)*(y - 1), (y, 0, 1))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4*Integral(x*Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4*Integral(x*Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4*Integral(-Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4*Integral(-Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4.0*Integral(x*Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4.0*Integral(x*Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4.0*Integral(-Integral(y*sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1)) + 4.0*Integral(-Integral(-sqrt(x**2 + y**2), (y, 0, 1)), (x, 0, 1))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,11 +271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\sqrt{2}}{15} + \\frac{2}{15} + \\frac{\\log{\\left(1 + \\sqrt{2} \\right)}}{3}$"
+      ],
+      "text/plain": [
+       "sqrt(2)/15 + 2/15 + log(1 + sqrt(2))/3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# integrate(WeightedDistance, (y,0,1), (x,0,1)).expand().rewrite(log).doit()"
+    "# Integrate in one shot\n",
+    "integrate(WeightedDistance, (y,0,1), (x,0,1))"
    ]
   }
  ],
